Fix svg vertical alignment in buttons

--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -12,3 +12,6 @@
 
 .card-text
     color: #525f7f
+
+svg
+    vertical-align: -0.125em
